skins/larry/styles.css
/* ... */
#message div.warning {
	color: #960;
	background-position: 0 -86px;
}

#message div.error {
	color: #cf2734;
	background-position: 0 -55px;
}

#message div.confirmation {
	color: #093;
	background-position: 0 -25px;
}

#message div.loading {
	background: url(images/ajaxloader.gif) 2px 6px no-repeat;
}

#message div a,
#message div span {
	padding-right: 0.5em;
	text-decoration: none;
}

#message div a:hover {
	text-decoration: underline;
	cursor: pointer;
}

#message.statusbar {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	height: 27px;
	padding-left: 8px;
	border-top: 1px solid #ddd;
	border-radius: 0 0 4px 4px;
	background: #eaeaea;
	background: -moz-linear-gradient(top, #eaeaea 0%, #c8c8c8 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eaeaea), color-stop(100%,#c8c8c8));
	background: -o-linear-gradient(top, #eaeaea 0%, #c8c8c8 100%);
	background: -ms-linear-gradient(top, #eaeaea 0%, #c8c8c8 100%);
	background: linear-gradient(top, #eaeaea 0%, #c8c8c8 100%);
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.ui-dialog.error .ui-dialog-title,
.ui-dialog.warning .ui-dialog-title,
.ui-dialog.confirmation .ui-dialog-title {
	padding-left: 25px;
	background: url(images/messages.png) 0 5px no-repeat;
	text-shadow: 0 1px 1px #fff;
}

.ui-dialog.warning .ui-dialog-title {
	color: #960;
	background-position: 0 -90px;
}

.ui-dialog.error .ui-dialog-title {
	color: #cf2734;
	background-position: 0 -60px;
}

.ui-dialog.confirmation .ui-dialog-title {
	color: #093;
	background-position: 0 -30px;
}

.ui-dialog.popupmessage .ui-dialog-titlebar {
	padding: 8px 1em 4px 1em;
	background: #e3e3e3;
	background: -moz-linear-gradient(top, #e3e3e3 0%, #cfcfcf 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e3e3e3), color-stop(100%,#cfcfcf));
	background: -o-linear-gradient(top, #e3e3e3 0%, #cfcfcf 100%);
	background: -ms-linear-gradient(top, #e3e3e3 0%, #cfcfcf 100%);
	background: linear-gradient(top, #e3e3e3 0%, #cfcfcf 100%);
}

.ui-dialog.popupmessage .ui-widget-content {
	font-size: 12px;
	background: #eee;
	background: -moz-linear-gradient(top, #eee 0%, #dcdcdc 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eee), color-stop(100%,#dcdcdc));
	background: -o-linear-gradient(top, #eee 0%, #dcdcdc 100%);
	background: -ms-linear-gradient(top, #eee 0%, #dcdcdc 100%);
	background: linear-gradient(top, #eee 0%, #dcdcdc 100%);
}


/*** basic page layout ***/

#topline {
	height: 18px;
	background: url(images/linen_header.jpg) repeat #666;
	border-bottom: 1px solid #4f4f4f;
	padding: 2px 0 2px 10px;
	color: #aaa;
	text-align: center;
}

#topnav {
	height: 46px;
	margin-bottom: 10px;
	padding: 0 0 0 10px;
	background: #111;
	background: -moz-linear-gradient(top, #404040 0%, #060606 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#404040), color-stop(100%,#060606));
	background: -o-linear-gradient(top, #404040 0%, #060606 100%);
	background: -ms-linear-gradient(top, #404040 0%, #060606 100%);
	background: linear-gradient(top, #404040 0%, #060606 100%);
}

#topline a,
#topnav a {
	color: #eee;
	text-decoration: none;
}

#topline a:hover {
	text-decoration: underline;
}

#toplogo {
	padding-top: 2px;
	cursor: pointer;
}

.topleft {
	float: left;
}

.topright {
	float: right;
}

.closelink {
	display: inline-block;
	padding: 2px 10px 2px 20px;
}

#topline span.username {
	padding-right: 1em;
}

#topline .topleft a {
	display: inline-block;
	padding: 2px 0.8em 0 0;
	color: #aaa;
}

#topline a.button-logout {
	display: inline-block;
	padding: 2px 10px 2px 20px;
	background: url(images/buttons.png) -6px -193px no-repeat;
	color: #fff;
}

#taskbar .button-logout {
	display: none;
}

#taskbar a.button-logout span.button-inner {
	background-position: -2px -1791px;
}

#taskbar a.button-logout:hover span.button-inner {
	background-position: -2px -1829px;
}


/*** minimal version of the page header ***/

.minimal #topline {
	position: fixed;
	top: -18px;
	background: #444;
	z-index: 5000;
	width: 100%;
	height: 22px;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.minimal #topline:hover {
	top: 0px;
	opacity: 0.94;
	filter: alpha(opacity=94);
	-webkit-transition: top 0.3s ease-in-out;
	-moz-transition: top 0.3s ease-in-out;
	-o-transition: top 0.3s ease-in-out;
	transition: top 0.3s ease-in-out;
}

.extwin #topline,
.extwin #topline:hover {
	position: static;
	top: 0px;
	height: 18px;
	width: auto;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
	opacity: 0.999;
}

.minimal #topline a.button-logout {
	display: none;
}

.minimal #topline span.username {
	display: inline-block;
	padding-top: 2px;
}

.minimal #topnav {
	position: relative;
	top: 4px;
	height: 42px;
}

.minimal #taskbar a {
	position: relative;
	padding: 10px 10px 0 6px;
	height: 32px;
}

.minimal #taskbar .button-logout {
	display: inline-block;
}

.minimal #taskbar .button-inner {
	top: -4px;
	padding: 0;
	height: 24px !important;
	width: 27px;
	text-indent: -5000px;
}

#taskbar .tooltip {
	display: none;
}

.minimal #taskbar .tooltip {
	position: absolute;
	top: -500px;
	right: 2px;
	display: inline-block;
	padding: 2px 8px 3px 8px;
	background: #444;
	background: -moz-linear-gradient(top, #444 0%, #333 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#444), color-stop(100%,#333));
	background: -o-linear-gradient(top, #444 0%, #333 100%);
	background: -ms-linear-gradient(top, #444 0%, #333 100%);
	background: linear-gradient(top, #444 0%, #333 100%);
	color: #eee;
	font-weight: bold;
	white-space: nowrap;
	border: 1px solid #777;
	box-shadow: 0 1px 5px 0 #333;
	-moz-box-shadow: 0 1px 5px 0 #333;
	-webkit-box-shadow: 0 1px 5px 0 #333;
	-o-box-shadow: 0 1px 5px 0 #333;
	z-index: 200;
	white-space: nowrap;
	text-shadow: 0px 1px 1px #000;
}
/* ... */

